# UXKit

./: Cargo.toml  README.md
UXKitGenesis/: c-ffi
UXKitGenesis/FFI/: IOS-FFI.h
UXKitGenesis/Lib/: UX.swift
UXKitGenesis/Lib/Data/: LinearScale.swift
UXKitGenesis/Lib/Dev/: SampleData.swift
UXKitGenesis/Lib/Extensions/: Array.swift  Optional.swift
UXKitGenesis/Lib/UX/: UXFont.swift
UXKitGenesis/Shared/: RandomDev.swift
UXKitGenesis/UXKitGenesis.xcodeproj/: project.pbxproj
UXKitGenesis/UXKitGenesis.xcodeproj/project.xcworkspace/xcuserdata/colbyn.xcuserdatad/: UserInterfaceState.xcuserstate
UXKitGenesis/UXKitGenesis.xcodeproj/xcuserdata/colbyn.xcuserdatad/xcschemes/: xcschememanagement.plist
UXKitGenesis/iOS/: IOSApp.swift  NewPrototype.swift  Prototype.swift  SwiftUIDev.swift
UXKitGenesis/iOS/Playground.playground/: Contents.swift
genesis-rs/: Cargo.toml  cbindgen.toml
genesis-rs/c-ffi/include/: genesis-rs.h
genesis-rs/scripts/: build-c-interface.sh  clean.sh
genesis-rs/src/: lib.rs
genesis-rs/src/data/: color.rs  font.rs  mod.rs
genesis-rs/src/ui/: label.rs  mod.rs  table.rs  view.rs
genesis-rs/src/ux/: mod.rs  native_traits.rs
ux-kit-rs/: Cargo.toml
ux-kit-rs-c-api/: Cargo.toml
ux-kit-rs-c-api/scripts/: build-c-interface.sh
ux-kit-rs/src/: c_ffi_utils.rs  lib.rs
