[package]
name = "genesis-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies.ux-kit]
path = "../ux-kit-rs"

[dependencies.uuid]
version = "1.2.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",
]

[dependencies]
libc = "0.2.135"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1"
itertools = "0.10.0"
